2005-07-08  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* man/.cvsignore:
	* src/.cvsignore:
	* src/Makefile.am:
	Add .cvsignore files
	Switch _la_CFLAGS for AM_CFLAGS to clean up directory
